@@ -27,6 +27,7 @@ metaclass call with (class << self; self; end) and all will be well.
 * Applied patch from Bob Cotton: Nested ExampleGroups do not have a spec_path. Closes #224.
 * Add before_suite and after_suite callbacks to ExampleGroupMethods and Options. Closes #210.
 * The after(:suite) callback lambda is passed a boolean representing whether the suite passed or failed
+* Added IndentedTextFormatter. Closes #366.
 
 == Version 1.1.3
 
